ajustado ordenacao das tables

--- a/production_management.html
+++ b/production_management.html
@@ -214,20 +214,14 @@
 
           <!--Tabela -> Gerenciamento de Produtos-->
           <section class="section-table" >
-            <div id="div-title">
-              <div id="nome-table"><h4>Nome</h4></div>
-              <div id="tipo-table"><h4>Tipo</h4></div>
-              <div id="lote-table"><h4>Lote</h4></div>
-              <div id="opcoes"><h4>Opções</h4></div>
-            </div>
             <div id="div-table">
               <table id="myTable" class="table">
                 <thead>
                     <tr>
-                      <th></th>
-                      <th></th>
-                      <th></th>
-                      <th></th>
+                      <th id="nome-table">Nome</th>
+                      <th id="tipo-table">Tipo</th>
+                      <th id="lote-table">Lote</th>
+                      <th id="opcoes">Opções</th>
                     </tr>
                 </thead>
                 <tbody id="tablebody"></tbody>
