--- a/sale_management.html
+++ b/sale_management.html
@@ -212,17 +212,19 @@
 
     <!--Tabela -> Gerenciamento de Usuarios-->
     <section class="section-table">
-      <table id="myTable" class="table">
-        <thead>
-          <tr>
-            <th id="data">Data</th>
-            <th id="vendedor">Vendedor</th>
-            <th>Total</th>
-            <th id="opcoes">Opções</th>
-          </tr>
-        </thead>
-        <tbody id="tablebody"></tbody>
-      </table>
+      <div id="div-table">
+        <table id="myTable" class="table">
+          <thead>
+            <tr>
+              <th id="data">Data</th>
+              <th id="vendedor">Vendedor</th>
+              <th>Total</th>
+              <th id="opcoes">Opções</th>
+            </tr>
+          </thead>
+          <tbody id="tablebody"></tbody>
+        </table>
+      </div>
     </section>
   </section>
   </div>
