--- a/test.html
+++ b/test.html
@@ -32,7 +32,7 @@
                         <img src="./images/expand_less_black_24dp.svg" alt="" width="23">
                     </th>
                     <th class="top-table" onclick="sortTable(document.getElementById('myTable'),'asc',0)">Quantidade
-                        <img src="./images/arrowDown.png" alt="" width="23">
+                        <img src="./images/expand_less_black_24dp.svg" alt="" width="23">
                     </th>
                     <th class="top-table" onclick="sortTable(document.getElementById('myTable'),'asc',0)">Valor
                         <img src="./images/arrowDown.png" alt="" width="23">
