--- a/user_management.html
+++ b/user_management.html
@@ -210,18 +210,13 @@
 
         <!--Tabela -> Gerenciamento de Usuarios-->
         <section class="section-table" >
-          <div id="div-title">
-            <div id="nome"><h4>Nome</h4></div>
-            <div id="usuario"><h4>Usuário</h4></div>
-            <div id="opcoes"><h4>Opções</h4></div>
-          </div>
           <div id="div-table">
             <table id="myTable" class="table">
               <thead>
                   <tr>
-                      <th></th>
-                      <th></th>
-                      <th></th>
+                      <th>Nome</th>
+                      <th>Usuário</th>
+                      <th id="opcoes">Opções</th>
                   </tr>
               </thead>
               <tbody id="tablebody"></tbody>
