--- a/user_management.html
+++ b/user_management.html
@@ -123,7 +123,7 @@
               </button>
             </li>
           </div>
-          <div class="mb">
+          <!-- <div class="mb">
             <li class="mb-1">
               <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
                 <div class="set1">
@@ -132,7 +132,7 @@
                 </div>
               </button>
             </li>
-          </div>
+          </div> -->
           <div class="mb">
             <li class="mb-1">
               <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
