--- a/product_management.html
+++ b/product_management.html
@@ -125,7 +125,7 @@
               </button>
             </li>
           </div>
-          <div class="mb">
+          <!-- <div class="mb">
             <li class="mb-1">
               <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
                 <div class="set1">
@@ -134,7 +134,7 @@
                 </div>
               </button>
             </li>
-          </div>
+          </div> -->
           <div class="mb">
             <li class="mb-1">
               <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
