--- a/production_management.html
+++ b/production_management.html
@@ -126,7 +126,7 @@
               </button>
             </li>
           </div>
-          <div class="mb">
+          <!-- <div class="mb">
             <li class="mb-1">
               <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
                 <div class="set1">
@@ -135,7 +135,7 @@
                 </div>
               </button>
             </li>
-          </div>
+          </div> -->
           <div class="mb">
             <li class="mb-1">
               <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
