--- a/reports_sale.html
+++ b/reports_sale.html
@@ -110,7 +110,7 @@
               </button>
             </li>
           </div>
-          <div class="mb">
+          <!-- <div class="mb">
             <li class="mb-1">
               <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
                 <div class="set1">
@@ -119,7 +119,7 @@
                 </div>
               </button>
             </li>
-          </div>
+          </div> -->
           <div class="mb">
             <li class="mb-1">
               <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
