adicionado novo title na tela de cadastro de vendas

--- a/sale_registration.html
+++ b/sale_registration.html
@@ -223,9 +223,12 @@
                   </div>
                 </div>
                 <div class="form" id="container">
+                  <div id="infoTitle">
+                    <h6 style="text-align: center;">Adicionar informações</h6>
+                  </div>
                   <div class="seller-date" id="boxdate">
                     <label>Vendedor
-                      <input id="seller" type="text" placeholder="" disabled/>
+                      <input id="seller" type="text" placeholder=""/>
                       <p id="alerta_vendedor" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
                     <label>Data
@@ -241,7 +244,7 @@
                   </div>
                   <div id="productsTitle">
                     <div class="title"></div>
-                    <h6>Produtos adicionados</h6>
+                    <h6>Adicionar produtos</h6>
                   </div>
                   <div class="p-t-q-p-t" id="boxsale">
                     <div class="product-type-quantity">
