Validando inputs da tela de cadastro de vendas

--- a/sale_registration.html
+++ b/sale_registration.html
@@ -250,12 +250,12 @@
                     <div class="product-type-quantity">
                       <div class="product">
                         <label id="productLabel">Produto
-                          <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                          <p id="produto-00" style="display: none;">O Campo precisa ser preenchido</p>
                         </label>
                       </div>
                       <div class="type">
                         <label id="typeLabel">Tipo
-                          <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                          <p id="tipo-00" style="display: none;">O Campo precisa ser preenchido</p>
                         </label>
                       </div>
                       <label id="labelQuantity">Quantidade
