Adicionando valores a tela de gerenciamento de vendas

--- a/sale_management.html
+++ b/sale_management.html
@@ -263,17 +263,17 @@
       <div class="group">
         <div class="payment">
           <label for="">Forma de pagamento
-            <input id="formapagamento" type="text" placeholder="" disabled/>
+            <input id="formapagamento1" type="text" placeholder="" disabled/>
           </label>
         </div>
         <div class="payday">
           <label for="">Data de pagamento
-            <input id="datapagamento" type="text" placeholder="" disabled/>
+            <input id="datapagamento1" type="text" placeholder="" disabled/>
           </label>
         </div>
         <div class="amount-paid">
           <label for="">Valor pago
-            <input id="valorpago" type="text" placeholder="" disabled/>
+            <input id="valorpago1" type="text" placeholder="" disabled/>
           </label>
         </div>
       </div>
@@ -281,22 +281,22 @@
       <div class="group">
         <div class="date-sale">
           <label for="">Data da venda
-            <input id="datavenda" type="text" placeholder="" disabled/>
+            <input id="datavenda1" type="text" placeholder="" disabled/>
           </label>
         </div>
         <div class="seller">
           <label for="">Vendedor
-            <input id="vendedor" type="text" placeholder="" disabled/>
+            <input id="vendedor1" type="text" placeholder="" disabled/>
           </label>
         </div>
         <div class="delivery">
           <label for="">Data de entrega
-            <input id="dataentrega" type="text" placeholder="" disabled/>
+            <input id="dataentrega1" type="text" placeholder="" disabled/>
           </label>
         </div>
         <div class="total">
           <label for="">Total
-            <input id="total" type="text" placeholder="" disabled/>
+            <input id="total1" type="text" placeholder="" disabled/>
           </label>
         </div>
       </div>
@@ -340,17 +340,17 @@
     <div class="group">
       <div class="payment">
         <label for="">Forma de pagamento
-          <input id="formapagamento" type="text" placeholder="" />
+          <input id="formapagamento2" type="text" placeholder="" />
         </label>
       </div>
       <div class="payday">
         <label for="">Data de pagamento
-          <input id="datapagamento" type="text" placeholder="" />
+          <input id="datapagamento2" type="text" placeholder="" />
         </label>
       </div>
       <div class="amount-paid">
         <label for="">Valor pago
-          <input id="valorpago" type="text" placeholder="" />
+          <input id="valorpago2" type="text" placeholder="" />
         </label>
       </div>
     </div>
@@ -358,22 +358,22 @@
     <div class="group">
       <div class="date-sale">
         <label for="">Data da venda
-          <input id="datavenda" type="text" placeholder="" />
+          <input id="datavenda2" type="text" placeholder="" />
         </label>
       </div>
       <div class="seller">
         <label for="">Vendedor
-          <input id="vendedor" type="text" placeholder="" />
+          <input id="vendedor2" type="text" placeholder="" />
         </label>
       </div>
       <div class="delivery">
         <label for="">Data de entrega
-          <input id="dataentrega" type="text" placeholder="" />
+          <input id="dataentrega2" type="text" placeholder="" />
         </label>
       </div>
       <div class="total">
         <label for="">Total
-          <input id="total" type="text" placeholder="" />
+          <input id="total2" type="text" placeholder="" />
         </label>
       </div>
     </div>
