Modais de visualizar e deletar funcionando, editar em andamento

--- a/sale_management.html
+++ b/sale_management.html
@@ -262,8 +262,8 @@
 
       <div class="group">
         <div class="payment">
-          <label for="">Forma de pagamento
-            <input id="formapagamento1" type="text" placeholder="" disabled/>
+          <label for="" id="formapay1">Forma de pagamento
+            <!-- <input id="formapagamento1" type="text" placeholder="" disabled/> -->
           </label>
         </div>
         <div class="payday">
@@ -339,8 +339,8 @@
 
     <div class="group">
       <div class="payment">
-        <label for="">Forma de pagamento
-          <input id="formapagamento2" type="text" placeholder="" />
+        <label for="" id="formapay2">Forma de pagamento
+          <!-- <input id="formapagamento2" type="text" placeholder="" /> -->
         </label>
       </div>
       <div class="payday">
@@ -410,7 +410,7 @@
 
   <script type="module" src="script/sale_management.js"></script>
   <script src="script/preloader.js"></script>
-  <script type="module" src="script/modal.js"></script>
+  <!-- <script type="module" src="script/modal.js"></script> -->
 </body>
 
 </html>
