Modal em andamento

--- a/sale_management.html
+++ b/sale_management.html
@@ -363,7 +363,7 @@
       </div>
       <div class="seller">
         <label for="">Vendedor
-          <input id="vendedor2" type="text" placeholder="" />
+          <input id="vendedor2" type="text" placeholder="" disabled/>
         </label>
       </div>
       <div class="delivery">
