Melhorias na validacao dos inputs de cadastro de vendas

--- a/sale_registration.html
+++ b/sale_registration.html
@@ -344,13 +344,13 @@
               <div class="total-paid" id="boxpayment">
                 <label>Total pago
                   <input id="total-paid" type="text" placeholder=""/>
-                  <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                  <p id="total-paid-alerta" style="display: none;">O Campo precisa ser preenchido</p>
                 </label>
               </div>
               <div class="total-pending" id="boxpeding">
                 <label>Total pendente
                   <input id="totalpendente" type="text" placeholder=""/>
-                  <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                  <p id="totalpendente-alerta" style="display: none;">O Campo precisa ser preenchido</p>
                 </label>
               </div>
             </div>
