nova label adicionada na tela de cadastro de vendas

--- a/sale_registration.html
+++ b/sale_registration.html
@@ -235,6 +235,10 @@
                       <input id="date" type="date" placeholder=""/>
                       <p id="alerta_data" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
+                    <label>Data de entrega
+                      <input id="datedelivery" type="date" placeholder=""/>
+                      <p id="alerta_data" style="display: none;">O Campo precisa ser preenchido</p>
+                    </label>
                     <div class="total-general-3">
                       <label id="totalGeneralOrder">Total geral
                         <input id="total-general-order" type="text" placeholder=""/>
