Modal de visualizar e editar em andamento

--- a/sale_management.html
+++ b/sale_management.html
@@ -245,7 +245,8 @@
           <th class="top-table">Quantidade</th>
           <th class="top-table">Valor</th>
         </tr>
-        <tr>
+        <tbody id="tablebody3"></tbody>
+        <!-- <tr>
           <td class="data-table">Coxinha de frango</td>
           <td class="data-table">20</td>
           <td class="data-table">R$ 0,69</td>
@@ -254,7 +255,7 @@
           <td class="data-table">Coxinha de frango</td>
           <td class="data-table">20</td>
           <td class="data-table">R$ 0,69</td>
-        </tr>
+        </tr> -->
       </table> 
   
       <table class="table-payment">
@@ -263,7 +264,8 @@
           <th class="top-table">Valor pago</th>
           <th class="top-table">Data de pagamento</th>
         </tr>
-        <tr>
+        <tbody id="tablebody2"></tbody>
+        <!-- <tr>
           <td class="data-table">Dinheiro</td>
           <td class="data-table">R$ 5,00</td>
           <td class="data-table">01/08/21</td>
@@ -272,40 +274,40 @@
           <td class="data-table">Dinheiro</td>
           <td class="data-table">R$ 5,00</td>
           <td class="data-table">01/08/21</td>
-        </tr>
+        </tr> -->
       </table> 
   
       <div class="group">
         <div class="date-sale">
           <label for="">Data da venda
-            <input id="datavenda" type="text" placeholder="" disabled/>
+            <input id="datavenda1" type="text" placeholder="" disabled/>
           </label>
         </div>
         <div class="seller">
           <label for="">Vendedor
-            <input id="vendedor" type="text" placeholder="" disabled/>
+            <input id="vendedor1" type="text" placeholder="" disabled/>
           </label>
         </div>
         <div class="delivery">
           <label for="">Data de entrega
-            <input id="dataentrega" type="text" placeholder="" disabled/>
+            <input id="dataentrega1" type="text" placeholder="" disabled/>
           </label>
         </div>
       </div>
       <div class="group">
         <div class="amount-paid">
           <label for="">Total pago
-            <input id="totalpago" type="text" placeholder="" disabled/>
+            <input id="totalpago1" type="text" placeholder="" disabled/>
           </label>
         </div>
-        <div class="total-pending">
+        <div class="total-pending1">
           <label for="">Total pendente
             <input id="totalpendente" type="text" placeholder="" disabled/>
           </label>
         </div>
         <div class="total-sale">
           <label for="">Total da venda
-            <input id="totalvenda" type="text" placeholder="" disabled/>
+            <input id="totalvenda1" type="text" placeholder="" disabled/>
           </label>
         </div>
       </div>
@@ -348,7 +350,8 @@
         <th class="top-table">Valor pago</th>
         <th class="top-table">Data de pagamento</th>
       </tr>
-      <tr>
+      <tbody id="tablebody4"></tbody>
+      <!-- <tr>
         <td class="data-table">Dinheiro</td>
         <td class="data-table">R$ 5,00</td>
         <td class="data-table">01/08/21</td>
@@ -357,40 +360,40 @@
         <td class="data-table">Dinheiro</td>
         <td class="data-table">R$ 5,00</td>
         <td class="data-table">01/08/21</td>
-      </tr>
+      </tr> -->
     </table> 
 
     <div class="group">
       <div class="date-sale">
         <label for="">Data da venda
-          <input id="datavenda" type="text" placeholder="" />
+          <input id="datavenda2" type="text" placeholder="" />
         </label>
       </div>
       <div class="seller">
         <label for="">Vendedor
-          <input id="vendedor" type="text" placeholder="" />
+          <input id="vendedor2" type="text" placeholder="" />
         </label>
       </div>
       <div class="delivery">
         <label for="">Data de entrega
-          <input id="dataentrega" type="text" placeholder="" />
+          <input id="dataentrega2" type="text" placeholder="" />
         </label>
       </div>
     </div>
     <div class="group">
       <div class="amount-paid">
         <label for="">Total pago
-          <input id="totalpago" type="text" placeholder="" />
+          <input id="totalpago2" type="text" placeholder="" />
         </label>
       </div>
       <div class="total-pending">
         <label for="">Total pendente
-          <input id="totalpendente" type="text" placeholder="" />
+          <input id="totalpendente2" type="text" placeholder="" />
         </label>
       </div>
       <div class="total-sale">
         <label for="">Total da venda
-          <input id="totalvenda" type="text" placeholder="" />
+          <input id="totalvenda2" type="text" placeholder="" />
         </label>
       </div>
       <div class="btn-group">
