Funcionamento de todos os inputs de venda

--- a/sale_registration.html
+++ b/sale_registration.html
@@ -235,7 +235,7 @@
                       <input id="date" type="date" placeholder=""/>
                       <p id="alerta_data" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
-                    <label>Data de entrega
+                    <label id="labelDateDelivery">Data de entrega
                       <input id="datedelivery" type="date" placeholder=""/>
                       <p id="alerta_data" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
