Modal de editar em andamento

--- a/sale_management.html
+++ b/sale_management.html
@@ -332,7 +332,8 @@
         <th class="top-table">Quantidade</th>
         <th class="top-table">Valor</th>
       </tr>
-      <tr>
+      <tbody id="tablebody5"></tbody>
+      <!-- <tr>
         <td class="data-table">Coxinha de frango</td>
         <td class="data-table">20</td>
         <td class="data-table">R$ 0,69</td>
@@ -341,7 +342,7 @@
         <td class="data-table">Coxinha de frango</td>
         <td class="data-table">20</td>
         <td class="data-table">R$ 0,69</td>
-      </tr>
+      </tr> -->
     </table> 
 
     <table class="table-payment">
@@ -427,7 +428,7 @@
 
   <script type="module" src="script/sale_management.js"></script>
   <script src="script/preloader.js"></script>
-  <script type="module" src="script/modal.js"></script>
+  <!-- <script type="module" src="script/modal.js"></script> -->
 </body>
 
 </html>
