Botões de deletar da tela de cadastro de produtos funcionando

--- a/sale_registration.html
+++ b/sale_registration.html
@@ -336,7 +336,7 @@
                 <button type="button" id="buttonAddPayment">Adicionar</button>
               </div>
               <div class="button-del" style="margin-right: 30px;">
-                <button type="button" id="buttonDel">Deletar</button>
+                <button type="button" id="buttonDelPayment">Deletar</button>
               </div>
             </div>
             <div class="buttons" style="justify-content: flex-end; width: 100%;">
