botao setinha de redirecionamento para forma de pagamento funcionando

--- a/sale_registration.html
+++ b/sale_registration.html
@@ -294,8 +294,8 @@
                     </label>
                   </div>
                   <div class="register">
-                    <div class="btn-group" style="width: 10%;">
-                      <button class="btn btn-primary" id="btn_setinha" type="button">></button>
+                    <div class="btn-group" style="width: 10%;" >
+                      <button class="btn btn-primary" id="btn_setinha_1" type="button">></button>
                     </div>
                   </div>
               </div>
@@ -356,7 +356,7 @@
             </div>
             <div class="register" style="justify-content: space-between;">
               <div class="btn-group" style="width: 10%;">
-                <button class="btn btn-primary" id="btn_setinha" type="button"><</button>
+                <button class="btn btn-primary" id="btn_setinha_2" type="button"><</button>
               </div>
               <div class="btn-group">
                 <button class="btn btn-primary" id="btn_cadastrar" type="button"  data-bs-toggle="modal" data-bs-target="#checked">CADASTRAR</button>
