Consertando validacao dos inputs e arrumando modal

--- a/sale_registration.html
+++ b/sale_registration.html
@@ -237,7 +237,7 @@
                     </label>
                     <label id="labelDateDelivery">Data de entrega
                       <input id="datedelivery" type="date" placeholder=""/>
-                      <p id="alerta_data" style="display: none;">O Campo precisa ser preenchido</p>
+                      <p id="alerta_data2" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
                     <div class="total-general-3">
                       <label id="totalGeneralOrder">Total geral
