Texto do modal de editar e visualizar vendas ajeitado <FALTANDO INFORMAÇÕES PUXADAS DO JS>

--- a/sale_management.html
+++ b/sale_management.html
@@ -241,21 +241,12 @@
     <form>
       <table>
         <tr>
-          <th class="top-table">Item</th>
+          <th class="top-table">Produto</th>
+          <th class="top-table">Tipo</th>
           <th class="top-table">Quantidade</th>
           <th class="top-table">Valor</th>
         </tr>
         <tbody id="tablebody3"></tbody>
-        <!-- <tr>
-          <td class="data-table">Coxinha de frango</td>
-          <td class="data-table">20</td>
-          <td class="data-table">R$ 0,69</td>
-        </tr>
-        <tr>
-          <td class="data-table">Coxinha de frango</td>
-          <td class="data-table">20</td>
-          <td class="data-table">R$ 0,69</td>
-        </tr> -->
       </table> 
   
       <table class="table-payment">
@@ -265,17 +256,7 @@
           <th class="top-table">Data de pagamento</th>
         </tr>
         <tbody id="tablebody2"></tbody>
-        <!-- <tr>
-          <td class="data-table">Dinheiro</td>
-          <td class="data-table">R$ 5,00</td>
-          <td class="data-table">01/08/21</td>
-        </tr>
-        <tr>
-          <td class="data-table">Dinheiro</td>
-          <td class="data-table">R$ 5,00</td>
-          <td class="data-table">01/08/21</td>
-        </tr> -->
-      </table> 
+      </table>
   
       <div class="group">
         <div class="date-sale">
@@ -328,21 +309,12 @@
   <form>
     <table>
       <tr>
-        <th class="top-table">Item</th>
+        <th class="top-table">Produto</th>
+        <th class="top-table">Tipo</th>
         <th class="top-table">Quantidade</th>
         <th class="top-table">Valor</th>
       </tr>
       <tbody id="tablebody5"></tbody>
-      <!-- <tr>
-        <td class="data-table">Coxinha de frango</td>
-        <td class="data-table">20</td>
-        <td class="data-table">R$ 0,69</td>
-      </tr>
-      <tr>
-        <td class="data-table">Coxinha de frango</td>
-        <td class="data-table">20</td>
-        <td class="data-table">R$ 0,69</td>
-      </tr> -->
     </table> 
 
     <table class="table-payment">
@@ -352,16 +324,6 @@
         <th class="top-table">Data de pagamento</th>
       </tr>
       <tbody id="tablebody4"></tbody>
-      <!-- <tr>
-        <td class="data-table">Dinheiro</td>
-        <td class="data-table">R$ 5,00</td>
-        <td class="data-table">01/08/21</td>
-      </tr>
-      <tr>
-        <td class="data-table">Dinheiro</td>
-        <td class="data-table">R$ 5,00</td>
-        <td class="data-table">01/08/21</td>
-      </tr> -->
     </table> 
 
     <div class="group">
