Modelo div no modal

--- a/sale_management.html
+++ b/sale_management.html
@@ -307,7 +307,28 @@
   </div>
 
   <form>
-    <table>
+
+    <div>
+
+      <label for="" id="pro">Produto
+
+      </label>
+
+      <label for="" id="tip">Tipo
+
+      </label>
+
+      <label for="" id="qua">Quantidade
+
+      </label>
+
+      <label for="" id="val">Valor
+
+      </label>
+
+    </div>
+
+    <!-- <table>
       <tr>
         <th class="top-table">Produto</th>
         <th class="top-table">Tipo</th>
@@ -315,16 +336,32 @@
         <th class="top-table">Valor</th>
       </tr>
       <tbody id="tablebody5"></tbody>
-    </table> 
+    </table>  -->
 
-    <table class="table-payment">
+    <div>
+
+      <label for="" id="forpag">Forma de pagamento
+
+      </label>
+
+      <label for="" id="valpag">Valor pago
+
+      </label>
+
+      <label for="" id="datpag">Data de pagamento
+
+      </label>
+
+    </div>
+
+    <!-- <table class="table-payment">
       <tr>
         <th class="top-table">Forma de pagamento</th>
         <th class="top-table">Valor pago</th>
         <th class="top-table">Data de pagamento</th>
       </tr>
       <tbody id="tablebody4"></tbody>
-    </table> 
+    </table>  -->
 
     <div class="group">
       <div class="date-sale">
