Estilização do modal editar da tela de gerenciamento de vendas <FEITO E FUNCIONANDO>

--- a/sale_management.html
+++ b/sale_management.html
@@ -307,61 +307,18 @@
   </div>
 
   <form>
-
-    <div>
-
-      <label for="" id="pro">Produto
-
-      </label>
-
-      <label for="" id="tip">Tipo
-
-      </label>
-
-      <label for="" id="qua">Quantidade
-
-      </label>
-
-      <label for="" id="val">Valor
-
-      </label>
-
+    <div class="table1">
+      <label for="" id="pro">Produto</label>
+      <label for="" id="tip">Tipo</label>
+      <label for="" id="qua">Quantidade</label>
+      <label for="" id="val">Valor</label>
     </div>
 
-    <!-- <table>
-      <tr>
-        <th class="top-table">Produto</th>
-        <th class="top-table">Tipo</th>
-        <th class="top-table">Quantidade</th>
-        <th class="top-table">Valor</th>
-      </tr>
-      <tbody id="tablebody5"></tbody>
-    </table>  -->
-
-    <div>
-
-      <label for="" id="forpag">Forma de pagamento
-
-      </label>
-
-      <label for="" id="valpag">Valor pago
-
-      </label>
-
-      <label for="" id="datpag">Data de pagamento
-
-      </label>
-
+    <div class="table1" style="margin-top: 12px;">
+      <label for="" id="forpag">Forma de pagamento</label>
+      <label for="" id="valpag">Valor pago</label>
+      <label for="" id="datpag">Data de pagamento</label>
     </div>
-
-    <!-- <table class="table-payment">
-      <tr>
-        <th class="top-table">Forma de pagamento</th>
-        <th class="top-table">Valor pago</th>
-        <th class="top-table">Data de pagamento</th>
-      </tr>
-      <tbody id="tablebody4"></tbody>
-    </table>  -->
 
     <div class="group">
       <div class="date-sale">
