--- a/sale_management.html
+++ b/sale_management.html
@@ -307,24 +307,12 @@
   </div>
 
   <form>
-    <table>
-      <tr>
-        <th class="top-table">Item</th>
-        <th class="top-table">Quantidade</th>
-        <th class="top-table">Valor</th>
-      </tr>
-      <tbody id="tablebody5"></tbody>
-      <!-- <tr>
-        <td class="data-table">Coxinha de frango</td>
-        <td class="data-table">20</td>
-        <td class="data-table">R$ 0,69</td>
-      </tr>
-      <tr>
-        <td class="data-table">Coxinha de frango</td>
-        <td class="data-table">20</td>
-        <td class="data-table">R$ 0,69</td>
-      </tr> -->
-    </table> 
+    <div class="table1">
+      <label for="" id="pro">Produto</label>
+      <label for="" id="tip">Tipo</label>
+      <label for="" id="qua">Quantidade</label>
+      <label for="" id="val">Valor</label>
+    </div>
 
     <div class="table1" style="margin-top: 12px;">
       <label for="" id="forpag">Forma de pagamento</label>
