modal de produção consertado

--- a/production_registration.html
+++ b/production_registration.html
@@ -312,8 +312,11 @@
     <div class="mod-body">
       <form>
         <img src="images/GREEN-checked.png" alt="" width="50%"/>
-        <h1>Produto cadastrado com sucesso!</h1>
-        <button type="button" class="btn-paraGerenciamento" onclick="window.location.href = 'production_management.html'">IR PARA TELA DE GERENCIAMENTO</button>
+        <h1>Produção cadastrada com sucesso!</h1>
+        <div class="btn-links">
+          <button type="button" class="btn-paraGerenciamento" >IMPRIMIR TICKETS DE PRODUÇÃO</button>
+          <!-- <button type="button" class="btn-paraGerenciamento" onclick="window.location.href = 'production_management.html'">IR PARA TELA DE GERENCIAMENTO</button> -->
+        </div>
       </form>
     </div>
   </div>
