graficos ajustados os tamanhos

--- a/reports_product.html
+++ b/reports_product.html
@@ -198,13 +198,13 @@
             </div>
           </section>
           <section class="graphics-group">
-            <div class="graphics-single">  
+            <div class="graphics-circle">  
               <canvas id="grafico3"></canvas>
             </div>
-            <div class="graphics-single"> 
+            <div class="graphics-score"> 
               <canvas id="grafico"></canvas>
             </div>
-            <div class="graphics-single"> 
+            <div class="graphics-arrow"> 
               <canvas id="grafico2"></canvas> 
             </div>
         </section>
