modal de cadastro de vendas pronto

--- a/sale_registration.html
+++ b/sale_registration.html
@@ -379,7 +379,7 @@
             <div class="mod-body">
               <form>
                 <img src="images/GREEN-checked.png" alt="" width="50%"/>
-                <h1>Vendas cadastrada com sucesso!</h1>
+                <h1>Venda cadastrada com sucesso!</h1>
                 <div class="btn-links">
                   <button type="button" class="btn-paraGerenciamento" >IMPRIMIR VIA DO CLIENTE</button>
                   <button type="button" class="btn-paraGerenciamento" onclick="window.location.href = 'orders.html'">IR ATÉ ENCOMENDAS</button>
