Via do cliente em andamento

--- a/sale_registration.html
+++ b/sale_registration.html
@@ -380,7 +380,7 @@
                   <img src="images/GREEN-checked.png" alt="" width="50%"/>
                   <h1>Vendas cadastrada com sucesso!</h1>
                   <div class="btn-links">
-                    <button type="button" class="btn-paraGerenciamento" >IMPRIMIR VIA DO CLIENTE</button>
+                    <button type="button" class="btn-paraGerenciamento" id="viacl">IMPRIMIR VIA DO CLIENTE</button>
                     <button type="button" class="btn-paraGerenciamento" onclick="window.location.href = 'sale_management.html'">IR ATÉ ENCOMENDAS</button>
                   </div>
                 </form>
