--- a/sale_registration.html
+++ b/sale_registration.html
@@ -15,6 +15,7 @@
   <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-database.js"></script>
   <script src="script/database/database-connection.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.min.js"></script>
 </head>
 
 <body>
@@ -381,7 +382,7 @@
                 <img src="images/GREEN-checked.png" alt="" width="50%"/>
                 <h1>Venda cadastrada com sucesso!</h1>
                 <div class="btn-links">
-                  <button type="button" class="btn-paraGerenciamento" >IMPRIMIR VIA DO CLIENTE</button>
+                  <button type="button" class="btn-paraGerenciamento" id="viacli">IMPRIMIR VIA DO CLIENTE</button>
                   <button type="button" class="btn-paraGerenciamento" onclick="window.location.href = 'orders.html'">IR ATÉ ENCOMENDAS</button>
                 </div>
               </form>
